# CryptoMx

./: Link to front code  README.md  ReadMe  stacking.meta.txt  stacking.opt.wasm
public/: Mint.tsx  ProcessProposalDAO.tsx  index.html
smart contracts/fungible-token/: fungible_token.meta.txt
smart contracts/staking-pool/: Cargo.toml  build.rs
smart contracts/staking-pool/io/: Cargo.toml
smart contracts/staking-pool/io/src/: lib.rs
smart contracts/staking-pool/src/: lib.rs
smart contracts/staking-pool/tests/: hello_test.rs
src/: App.scss
src/pages/: index.tsx
src/pages/home/: Body.tsx  Home.tsx  LocalBalanceToken.tsx  index.ts
src/pages/inicio/: Body.tsx  Index.ts  inicio.tsx
src/pages/segunda/: Body.tsx  Segunda.tsx  index.ts
